config/admissionpolicy-aif/overlays/usernaut-aif-rhplatformtest/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: usernaut-aif-cr-name-prefix-policybinding
spec:
  policyName: usernaut-aif-cr-name-prefix-policy
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: ddis-asteroid--usernaut-aif-rhplatformtest
